--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   printing: ^3.5.0
   image: ^2.1.12
   flutter_share: ^1.0.2+1
+  flutter_speed_dial: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
